--- a/package.json
+++ b/package.json
@@ -1,10 +1,28 @@
 {
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.12",
+    "@react-native-firebase/app": "^14.11.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "@rneui/base": "^4.0.0-rc.4",
+    "@rneui/themed": "^4.0.0-rc.4",
     "expo": "^45.0.0",
+    "firebase": "8.2.3",
+    "lottie-react-native": "^5.1.3",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-bouncy-checkbox": "^2.1.10",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-reanimated": "^2.8.0",
+    "react-native-vector-icons": "^9.1.0",
+    "react-native-web": "0.17.7",
+    "react-redux": "^7.2.8",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "tslib": "^2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
